# user_management

./: .gitignore  .pre-commit-config.yaml  README.md  README_TUTORIAL.md  README_USAGE.md  db.sqlite3  pyproject.toml  setup.cfg  tox.ini
.github/workflows/: test_and_deploy.yml
config/: asgi.py  settings.py  urls.py  wsgi.py
licenses/: BSD-3  MIT
src/: admin.py  apps.py  forms.py  models.py  urls.py  views.py
src/migrations/: 0001_initial.py  0002_alter_project_image.py  0003_alter_project_image.py  0004_alter_project_image_alter_project_technology_and_more.py  0005_project_authors.py  0006_user.py  0007_user_country.py  0008_project_input_data_location_and_more.py  0009_alter_project_image.py  0010_alter_project_image.py  0011_alter_project_image.py  0012_project_input_data_project_input_script_and_more.py  0013_remove_project_input_data_and_more.py  0014_classroomprojects_delete_user.py
src/static/projects/img/: patch_division.avi
src/templates/projects/: all_projects.html  base.html  change_form.html  classdetail.html  classprojects.html  confirm_form.html  dashboard.html  dataset_detail.html  dataset_list.html  detail.html  index.html  reset_form.html  studio_detail.html  studio_list.html  toolkit_detail.html  toolkit_list.html  workflow_detail.html
src/templates/registration/: login.html  password_change_done.html  password_change_form.html  password_reset_complete.html  password_reset_confirm.html  password_reset_done.html  password_reset_email.html  password_reset_form.html  password_reset_subject.txt  register.html
src/templatetags/: projects_extras.py
src/user_management/: kietzmannlab.yaml
