[metadata]
name = user_management

description = Django app for user management for keeping a record of the Students, Visitors of the group
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/kapoorlab/user_management
author = Varun Kapoor
author_email = varun.kapoor@uni-osnabrueck.de
license = BSD-3-Clause
license_files = LICENSE
classifiers =
    Development Status :: 5 - Production/Stable
    Intended Audience :: Developers
    License :: OSI Approved :: BSD License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Topic :: Scientific/Engineering :: Image Processing
project_urls =
    Bug Tracker = https://github.com/kapoorlab/user_management/issues
    Documentation = https://github.com/kapoorlab/user_management#README.md
    Source Code = https://github.com/kapoorlab/user_management
    User Support = https://github.com/kapoorlab/user_management/issues

[options]
packages = find:
install_requires =
    numpy
    torch
    torchvision

python_requires = >=3.8
include_package_data = True
package_dir =
    =src
setup_requires = setuptools_scm
# add your package requirements here

[options.packages.find]
where = src

[options.entry_points]
kietzmannlab.manifest =
    user_management = user_management:kietzmannlab.yaml

[options.extras_require]
testing =
    tox
    pytest  # https://docs.pytest.org/en/latest/contents.html
    pytest-cov  # https://pytest-cov.readthedocs.io/en/latest/


[options.package_data]
* = *.yaml
